# ua-news-bot

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
scripts/: test_album_send.py  test_gemini_once.py  test_gemini_rest_once.py  test_video_pipeline.py  test_watermark_preview.py
src/ua_news_bot/: aggregator.py  config.py  dedup.py  dedup_sqlite.py  formatter.py  main.py  models.py  telegram_client.py  text_utils.py
src/ua_news_bot/ai/: gemini_enhancer.py
src/ua_news_bot/media/: downloader.py  image_editor.py  video_editor.py  video_resolver.py  ytdlp_downloader.py
src/ua_news_bot/sources/: base.py  suspilne.py
tests/: debug_make_branded_image.py  test_image_editor.py
